--- a/style.css
+++ b/style.css
@@ -47,9 +47,71 @@ markLongest{
 }
 
 .last5sentences{
-    width:300px;
+    width:400px;
     height:200px;
     border:1px solid black;
-    /* background: transparent; */
+    
 }
 
+.dot{
+    height: 25px;
+  width: 25px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  align-items: center;
+}
+
+.green{
+    background-color: rgb(16, 214, 16);
+}
+
+.orange{
+    background-color: orange;
+}
+
+.slidecontainer {
+    width: 100%;
+}
+  
+.slider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 15px;
+    border-radius: 5px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+}
+  
+.slider:hover {
+    opacity: 1;
+}
+  
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    /* background: #04AA6D; */
+    /* background: #eb80d9; */
+    background: #e3f305;
+    cursor: pointer;
+}
+  
+.slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    /* background: #04AA6D; */
+    /* background: #eb80d9; */
+    background: #e4f30c;
+    cursor: pointer;
+}
+
+p{
+    font-weight: bold;
+}
