--- a/style.css
+++ b/style.css
@@ -19,8 +19,8 @@ h1{
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
+    font-size: 14px;
+    margin: 2px 2px;
     transition-duration: 0.4s;
     cursor: pointer;
     border-radius: 8px;
@@ -49,17 +49,23 @@ markLongest{
 .last5sentences{
     width:400px;
     height:200px;
-    border:1px solid black;
+    /* color: white; */
+    /* border:1px solid black; */
     
+}
+
+li{
+    color: white;
+    list-style-type: decimal;
 }
 
 .dot{
     height: 25px;
-  width: 25px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  align-items: center;
+    width: 25px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    align-items: center;
 }
 
 .green{
@@ -68,6 +74,11 @@ markLongest{
 
 .orange{
     background-color: orange;
+}
+
+.error{
+    color: red;
+    font-weight: bold;
 }
 
 .slidecontainer {
@@ -114,4 +125,17 @@ markLongest{
 
 p{
     font-weight: bold;
+}
+
+.sentenceDisplay{
+    font-size: 1.3rem;
+}
+
+.lessthan5{
+    font-size: 1.3rem;
+}
+
+.count{
+    font-size: 1.5rem;
+    color: white;
 }
