--- a/style.css
+++ b/style.css
@@ -127,8 +127,27 @@ p{
     font-weight: bold;
 }
 
+.bold1{
+    font-weight: bold;
+    color: orange;
+}
+
+.bold2{
+    font-weight: bold;
+    color: green;
+}
+
+.key{
+    font-weight: bold;
+}
+
+#demo{
+    padding-bottom: 4%;
+}
+
 .sentenceDisplay{
     font-size: 1.3rem;
+    padding-top: 2%;
 }
 
 .lessthan5{
@@ -138,4 +157,26 @@ p{
 .count{
     font-size: 1.5rem;
     color: white;
+}
+
+.hide{
+    padding-top: 5%;
+}
+
+.dot1{
+    height: 25px;
+    width: 25px;
+    background-color: orange;
+    border-radius: 50%;
+    display: inline-block;
+    align-items: center;
+}
+
+.dot2{
+    height: 25px;
+    width: 25px;
+    background-color: green;
+    border-radius: 50%;
+    display: inline-block;
+    align-items: center;
 }
